jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: jenkins-staging.meshada.com # example subdomain url for your jenkins
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080 # jenkins is usually on this port
  tls: # enable tls to secure the doamin
    - hosts:
        - jenkins-staging.meshada.com
      secretName: jenkins-staging # the secret will be created by cert-manager and associated with this Ingress. so chaoes any name
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: kibana-staging.meshada.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quickstart-kb-http
                port:
                  number: 5601
  tls:
    - hosts:
        - kibana-staging.meshada.com
      secretName: kibana-staging
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: devtools-meshada-argocd-staging.meshada.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: http
  tls:
    - hosts:
        - devtools-meshada-argocd-staging.meshada.com
      secretName: argocd-secret
