jenkins/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: dea66ec9-3b25-4048-bb4b-e3340ffd6b3a.k8s.civo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
          - path: /kibana
            pathType: Exact
            backend:
              service:
                name: quickstart-kb-http
                port:
                  number: 5601
